@@ -5,7 +5,7 @@
 // Modified by:
 // Created:     30/03/2001
 // RCS-ID:      $Id$
-// Copyright:   (c) 2001-2002, 2004, 2006 Mattia Barbon
+// Copyright:   (c) 2001-2002, 2004, 2006-2007 Mattia Barbon
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
 /////////////////////////////////////////////////////////////////////////////
@@ -69,6 +69,11 @@ wxPliFileOffset stream_length( const wxStreamBase* stream, SV* fh );
 wxPliInputStream* wxPliInputStream_ctor( SV* sv )
 {
     return new wxPliInputStream( sv );
+}
+
+wxPliOutputStream* wxPliOutputStream_ctor( SV* sv )
+{
+    return new wxPliOutputStream( sv );
 }
 
 wxPliInputStream::wxPliInputStream( SV* fh )
