@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     05/11/2006
 ## RCS-ID:      $Id: typemap,v 1.3 2006/11/25 14:26:35 mbarbon Exp $
-## Copyright:   (c) 2006 Mattia Barbon
+## Copyright:   (c) 2006-2007 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -28,3 +28,8 @@ wxRichTextCharacterStyleDefinition * O_WXOBJECT
 wxRichTextParagraphStyleDefinition * O_WXOBJECT
 wxRichTextListStyleDefinition * O_WXOBJECT
 wxRichTextFormattingDialog * O_WXOBJECT
+wxRichTextBuffer *      O_WXOBJECT
+wxRichTextFileHandler * O_WXOBJECT
+wxPlRichTextFileHandler * O_WXOBJECT
+wxRichTextXMLHandler *  O_WXOBJECT
+wxRichTextHTMLHandler * O_WXOBJECT
