@@ -19,6 +19,8 @@
 %typemap{long}{simple};
 %typemap{float}{simple};
 %typemap{double}{simple};
+%typemap{wxChar}{simple};
+%typemap{SV*}{simple};
 
 %typemap{size_t}{simple};
 %typemap{time_t}{simple};
@@ -82,6 +84,7 @@
 %typemap{const wxTimeSpan&}{reference};
 
 %typemap{wxObject*}{simple};
+%typemap{wxEvtHandler*}{simple};
 %typemap{wxSplitterWindow*}{simple};
 %typemap{wxSplitterEvent*}{simple};
 %typemap{wxWindow*}{simple};
@@ -110,3 +113,4 @@
 %typemap{wxImage&}{reference};
 
 %typemap{wxPliInputStream}{simple};
+%typemap{wxPliOutputStream}{simple};
